deploy/k8s/namespace.yaml
# SPDX-License-Identifier: MPL-2.0
// Copyright (c) Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>
apiVersion: v1
kind: Namespace
metadata:
  name: opsm
  labels:
    app.kubernetes.io/part-of: opsm
    app.kubernetes.io/managed-by: kubectl
